Ver 0.6.5 overflow fix

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -30,6 +30,7 @@ main {
   padding: calc(var(--header-height) + 25px) 40px 25px 40px;
   height: inherit;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .loader {
